# libg19

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  configure.in  demo.c  hdata.h  libg19.c  libg19.h  libg19.pc  libg19.pc.in
libg19/: Makefile.am  libg19-data.c  libg19.c  libg19.h
